plugins {
    id 'org.springframework.boot' version '2.1.6.RELEASE'
    id 'java'
}

apply plugin: 'io.spring.dependency-management'

group = 'helmet.bikelab'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

dependencyManagement {
    imports {
        mavenBom 'com.amazonaws:aws-java-sdk-bom:1.11.228'
    }
}
repositories {
    mavenCentral()
    maven { url "https://repo.spring.io/snapshot" }
    maven { url "https://repo.spring.io/milestone" }
    maven { url "https://jitpack.io" }
}

configurations {
    // in order to exclude the loggging module making a conflict between slf4j and spring logging
    runtime.exclude group: "org.slf4j", module: "slf4j-log4j12"
    compile.exclude group: "org.slf4j", module: "slf4j-log4j12"
    //    compile.exclude module: 'spring-boot-starter-reactor-netty'
    //    compile.exclude module: 'spring-boot-starter-undertow'
}

dependencies {
    annotationProcessor("org.projectlombok:lombok:1.18.8")
    compileOnly('org.projectlombok:lombok')

    implementation 'org.springframework.boot:spring-boot-starter-quartz'
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation('org.springframework.boot:spring-boot-starter-webflux')
    compile group: 'org.springframework.boot', name: 'spring-boot-starter-cache'
    runtimeOnly('org.springframework.boot:spring-boot-devtools')
    compile group: 'org.springframework', name: 'spring-context-support', version: '5.1.3.RELEASE'
    compile 'org.springframework.boot:spring-boot-starter-undertow'

    //	Database
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    compile('org.springframework.boot:spring-boot-starter-jdbc')
    compile group: 'com.ifrabbit', name: 'spring-data-mybatis', version: '1.0.17.RELEASE'
    runtimeOnly 'mysql:mysql-connector-java'
//    compile group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.1.1'

    //  Gson
    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.1'

    // Log
    compile group: 'org.bgee.log4jdbc-log4j2', name: 'log4jdbc-log4j2-jdbc4.1', version: '1.16'
    implementation group: 'ca.pjer', name: 'logback-awslogs-appender', version: '1.6.0'
    compile group: 'org.mindrot', name: 'jbcrypt', version: '0.4'

    implementation group: 'com.google.firebase', name: 'firebase-admin', version: '7.1.1'

    // JWT
    compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.6.0'
    compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.0'

    compile group: 'org.modelmapper', name: 'modelmapper', version: '2.3.5'

    // Mail
    compile group: 'javax.mail', name: 'mail', version: '1.4.7'
    // S3 FOR AWS
    compile 'com.amazonaws:aws-java-sdk-s3'
    compile group: 'com.amazonaws', name: 'aws-java-sdk', version: '1.11.894'


    //apache commons lang
    compile 'org.apache.commons:commons-lang3:3.8.1'

    compile 'com.brsanthu:google-analytics-java:2.0.0'

    //excel
    compile group: 'org.apache.poi', name: 'poi', version: '3.11'
    compile group: 'org.apache.poi', name: 'poi-ooxml', version: '3.11'

    compile group: 'commons-io', name: 'commons-io', version: '2.4'

    implementation group: 'com.ibm.icu', name: 'icu4j', version: '51.1'


    /*
     * Test Compile
     */
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation('io.projectreactor:reactor-test')
    testCompile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.25'
    // https://mvnrepository.com/artifact/com.h2database/h2
    testImplementation('org.springframework.boot:spring-boot-starter-test') {
        exclude module: 'junit'
    }
    testImplementation('org.junit.jupiter:junit-jupiter-api:5.2.0')
    testCompile('org.junit.jupiter:junit-jupiter-params:5.2.0')
    testRuntime('org.junit.jupiter:junit-jupiter-engine:5.2.0')
}

test {
    useJUnitPlatform()
}
